--- a/Fundraising/wwwroot/Registration/registration.html
+++ b/Fundraising/wwwroot/Registration/registration.html
@@ -8,12 +8,16 @@
     <!-- ajax -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <link rel="stylesheet" href="/layout.css">
     <link rel="stylesheet" href="/registration.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <title>註冊會員</title>
 
     <style>
@@ -29,6 +33,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background-color: #f1f3f5;
         }
 
 
@@ -56,7 +61,7 @@
             position: relative;
             height: 50px;
             width: 100%;
-            margin-top: 20px;
+            margin-top: 30px;
             border-radius: 6px;
         }
 
@@ -73,7 +78,7 @@
         .field input {
             outline: none;
             padding: 0 15px;
-            border: 1px solid #cacaca;
+            border: 2px solid #cacaca;
         }
 
             .field input:focus {
@@ -170,6 +175,28 @@
                 opacity: 0.8;
                 color: #232836;
             }
+
+        /* 驗證文字 */
+        .field.success input {
+            border-color: #047c51;
+        }
+
+        .field.error input {
+            border-color: #e74c3c;
+        }
+
+        .field small {
+            position: absolute;
+            left: 0;
+            margin-top: 50px;
+            visibility: hidden;
+        }
+
+        .field.error small {
+            color: #e74c3c;
+            visibility: visible;
+        }
+
     </style>
 </head>
 
@@ -180,28 +207,33 @@
 
                 <header>註冊新帳號</header>
 
-                <form>
+                <form action="#" id="form">
 
-                    <div class="field input-field">
-                        <input type="email" id="UserEmail" name="UserEmail" placeholder="輸入信箱" class="input" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"/>
+                    <div class="field input-field email-field">
+                        <input type="text" id="UserEmail" placeholder="輸入信箱" class="input" />
+                        <small>error message</small>
                     </div>
 
                     <div class="field input-field">
-                        <input type="text" id="UserNickname" name="UserNickname" placeholder="輸入會員名稱" class="input" required>
+                        <input type="text" id="UserNickname" placeholder="輸入會員名稱" class="input" />
+
+                        <small>error message</small>
                     </div>
 
                     <div class="field input-field">
-                        <input type="password" id="UserPassword" name="UserPassword" placeholder="輸入密碼(至少八碼)" class="password" pattern="^(?=.*[0-9]).{8,}$" required="required" oninput="setCustomValidity('');" oninvalid="setCustomValidity('請輸入正確的密碼格式:含英數至少八個字元');"/>
+                        <input type="password" id="UserPassword" placeholder="輸入密碼(至少八碼，須包含英文數字)" class="password" />
+                        <small>error message</small>
                     </div>
 
                     <div class="field input-field">
-                        <input type="password" placeholder="確認密碼" class="password" required="required" oninput="setCustomValidity('');" onchange="if(document.getElementById('inputPassword').value != document.getElementById('ConfirmPassword').value){setCustomValidity('密碼不吻合');}"/>
+                        <input type="password" id="confirmPassword" placeholder="確認密碼" class="password" />
                         <i class="uil uil-eye-slash eye-icon"></i>
+                        <small>error message</small>
                     </div>
 
 
                     <div class="field button-field">
-                        <button type="button" onclick="OK()">註冊</button>
+                        <button id="registerBtn" type="button" onclick="OK()">註冊</button>
                     </div>
 
                 </form>
@@ -215,19 +247,91 @@
 
             <div class="media-options">
                 <a href="" class="field google">
-                    <img src="google icon.png" alt="" style="width: 20px; height: 20px; object-fit: cover;">
+                    <img src="/google icon.png" alt="" style="width: 20px; height: 20px; object-fit: cover;">
                     <span>使用Google帳號繼續</span>
                 </a>
             </div>
         </div>
     </section>
-    
 
     <script src="../layout/layout.js"></script>
     <script src="registration.js"></script>
+
+    <!-- 驗證 -->
     <script>
-       
+        const form = document.getElementById('form')
+        const emailField = form.querySelector("email-field")
+        const email = document.getElementById('UserEmail')
+        const username = document.getElementById('UserNickname')
+        const password = document.getElementById('UserPassword')
+        const password2 = document.getElementById('confirmPassword')
+
+        document.getElementById('registerBtn').addEventListener('click', (e) => {
+            e.preventDefault();
+
+            checkInputs();
+        })
+
+        function checkInputs() {
+            const usernameValue = username.value.trim();
+            const emailValue = email.value.trim();
+            const passwordValue = password.value.trim();
+            const password2Value = password2.value.trim();
+
+            if (usernameValue === '') {
+                setErrorFor(username, '會員名稱不能為空白');
+            } else {
+                setSuccessFor(username);
+            }
+
+            if (emailValue === '') {
+                setErrorFor(email, '信箱不能為空白');
+            } else if (!isEmail(emailValue)) {
+                setErrorFor(email, '信箱格式錯誤')
+            } else {
+                setSuccessFor(email);
+            }
+
+            if (passwordValue === '') {
+                setErrorFor(password, '密碼不能為空白')
+            } else if (!isPassword(passwordValue)) {
+                setErrorFor(password, '密碼格式錯誤')
+            } else {
+                setSuccessFor(password);
+            }
+
+            if (password2Value === '') {
+                setErrorFor(password2, '確認密碼不能為空白')
+            } else if (passwordValue != password2Value) {
+                setErrorFor(password2, '與密碼不相符，請重新輸入')
+            } else {
+                setSuccessFor(password2);
+            }
+
+            function setErrorFor(input, message) {
+                const formControl = input.parentElement;
+                const small = formControl.querySelector('small');
+
+                small.innerText = message;
+
+                formControl.className = 'field error';
+            }
+
+            function setSuccessFor(input) {
+                const formControl = input.parentElement;
+                formControl.className = 'field success'
+            }
+
+            function isEmail(email) {
+                return /^\w+((-\w+)|(\.\w+)|(\+\w+))*\@[A-Za-z0-9]+((\.|-)[A-Za-z0-9]+)*\.[A-Za-z]+$/.test(email);
+            }
+
+            function isPassword(password) {
+                return /^(?=.*[a-zA-Z])(?=.*[0-9]).{8,}$/.test(password);
+            }
+        }
     </script>
+
 </body>
 
 </html>
